<resources>
    <string name="app_name">Real_Time_Chat_Final</string>
    <string name="alphabet">Alphabet</string>
    <string name="math">Math</string>
    <string name="quiz">Quiz</string>
    <string name="dictionary">Dictionary</string>
    <string name="topic_study">Explore</string>
    <string name="room_info">Room: %s</string>
    <string name="room_code">Code: %s</string>
    <string name="player_count">Players: %d/%d</string>
    <string name="ready">Ready</string>
    <string name="start_game">Start</string>
    <string name="leave_room">Leave Room</string>
    <string name="share_room">Share Room Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="privacy_options">
        <item>Public</item>
        <item>Friends</item>
        <item>Only me</item>
    </string-array>
</resources>